--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,9 +4,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": [
-      "node"
-    ]
+    "module": "commonjs",
+    "target": "es2015",
+    "types": ["jasmine", "node"]
+  
   },
   "files": [
     "src/main.ts",
@@ -14,6 +15,7 @@
     "src/server.ts"
   ],
   "include": [
+    "src/**/*.spec.ts",
     "src/**/*.d.ts"
   ]
 }
